--- a/gstreamer/po/it.po
+++ b/gstreamer/po/it.po
@@ -1,7 +1,7 @@
 # Italian translation for gstreamer package of GStreamer project.
 # Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009 GStreamer team
 # This file is distributed under the same license as the gstreamer package.
-# Luca Ferretti <elle.uca@infinito.it>, 2004-2009.
+# Luca Ferretti <elle.uca@infinito.it>, 2004, 2005, 2006, 2007, 2008, 2009.
 #
 #
 #
@@ -106,10 +106,10 @@
 # ----------------------------------------
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.21.3\n"
+"Project-Id-Version: gstreamer 0.10.24.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-09-16 22:57+0100\n"
-"PO-Revision-Date: 2009-01-13 11:10+0100\n"
+"POT-Creation-Date: 2009-10-01 16:11+0100\n"
+"PO-Revision-Date: 2009-09-17 23:20+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -240,10 +240,14 @@ msgstr ""
 msgid "Internal GStreamer error: code not implemented."
 msgstr "Errore interno di GStreamer: codice non implementato."
 
+# sarebbe da togliere personalizzazione di oggetto
 msgid ""
 "GStreamer error: state change failed and some element failed to post a "
 "proper error message with the reason for the failure."
 msgstr ""
+"Errore di GStreamer: cambio di stato non riuscito, alcuni elementi non sono "
+"riusciti a pubblicare un appropriato messaggio di errore con il motivo del "
+"fallimento."
 
 msgid "Internal GStreamer error: pad problem."
 msgstr "Errore interno di GStreamer: problema di pad."
@@ -384,6 +388,9 @@ msgstr "Nessun messaggio d'errore standard per il dominio %s e il codice %d."
 msgid "Selected clock cannot be used in pipeline."
 msgstr "Il clock selezionato non può essere usato nella pipeline."
 
+# questo e i successivi sono nome + descrizione delle proprietà
+# dei tag ID3 (o simili); le descrizioni per omogeneità iniziano
+# tutte con la lettera minuscola
 msgid "title"
 msgstr "titolo"
 
@@ -421,19 +428,17 @@ msgstr "nome ordinamento album"
 msgid "album containing this data for sorting purposes"
 msgstr "l'album che contiene questi dati a scopo di ordinamento"
 
-#, fuzzy
 msgid "album artist"
-msgstr "artista"
+msgstr "artista album"
 
 msgid "The artist of the entire album, as it should be displayed"
-msgstr ""
+msgstr "l'artista dell'intero album, così come dovrebbe essere mostrato"
 
-#, fuzzy
 msgid "album artist sortname"
-msgstr "nome ordinamento artista"
+msgstr "nome ordinamento artista album"
 
 msgid "The artist of the entire album, as it should be sorted"
-msgstr ""
+msgstr "l'artista dell'intero album, così come dovrebbe essere ordinato"
 
 msgid "date"
 msgstr "data"
@@ -499,12 +504,13 @@ msgstr ""
 "l'origine del contenuto multimediale come URI (posizione in cui il file o "
 "stream originale è ospitato)"
 
-#, fuzzy
 msgid "homepage"
-msgstr "immagine"
+msgstr "sito web"
 
 msgid "Homepage for this media (i.e. artist or movie homepage)"
 msgstr ""
+"sito web per questo contenuto multimediale (cioè il sito web dell'artista o "
+"del film)"
 
 msgid "description"
 msgstr "descrizione"
@@ -556,7 +562,7 @@ msgid "license uri"
 msgstr "uri licenza"
 
 msgid "URI to the license of the data"
-msgstr "L'URI alla licenza dei dati"
+msgstr "l'URI alla licenza dei dati"
 
 msgid "performer"
 msgstr "interprete"
@@ -594,21 +600,17 @@ msgstr "codec audio"
 msgid "codec the audio data is stored in"
 msgstr "il codec con cui i dati audio sono memorizzati"
 
-#, fuzzy
 msgid "subtitle codec"
-msgstr "codec video"
+msgstr "codec sottotitoli"
 
-#, fuzzy
 msgid "codec the subtitle data is stored in"
-msgstr "il codec con cui i dati video sono memorizzati"
+msgstr "il codec con cui i dati dei sottotitoli sono memorizzati"
 
-#, fuzzy
 msgid "container format"
-msgstr "le informazioni sul contatto"
+msgstr "formato contenitore"
 
-#, fuzzy
 msgid "container format the data is stored in"
-msgstr "il codec con cui di dati sono memorizzati"
+msgstr "il formato contenitore con cui i dati sono memorizzati"
 
 msgid "bitrate"
 msgstr "bitrate"
@@ -723,7 +725,6 @@ msgstr "le parole chiave separate da virgole che descrivono il contesto"
 msgid "geo location name"
 msgstr "nome geog. località"
 
-#, fuzzy
 msgid ""
 "human readable descriptive location of where the media has been recorded or "
 "produced"
@@ -831,7 +832,7 @@ msgid "Internal data flow error."
 msgstr "Errore interno nel flusso di dati."
 
 msgid "A lot of buffers are being dropped."
-msgstr ""
+msgstr "Stanno per essere scartati molti buffer."
 
 msgid "Internal data flow problem."
 msgstr "Problema interno nel flusso di dati."
@@ -996,9 +997,8 @@ msgstr "ERRORE: analisi del file xml «%s» non riuscita.\n"
 msgid "ERROR: no toplevel pipeline element in file '%s'.\n"
 msgstr "ERRORE: nessun elemento pipeline toplevel nel file «%s».\n"
 
-#, fuzzy
 msgid "WARNING: only one toplevel element is supported at this time.\n"
-msgstr "ATTENZIONE: al momento è supportato sono un elemento toplevel."
+msgstr "ATTENZIONE: al momento è supportato sono un elemento toplevel.\n"
 
 #, c-format
 msgid "ERROR: could not parse command line argument %d: %s.\n"
@@ -1009,21 +1009,21 @@ msgstr ""
 msgid "WARNING: element named '%s' not found.\n"
 msgstr "ATTENZIONE: elemento con nome «%s» non trovato.\n"
 
-#, fuzzy, c-format
+#, c-format
 msgid "Got message #%u from element \"%s\" (%s): "
-msgstr "Ottenuto EOS dall'elemento «%s».\n"
+msgstr "Ottenuto messaggio #%u dall'elemento \"%s\" (%s): "
 
 #, c-format
 msgid "Got message #%u from pad \"%s:%s\" (%s): "
-msgstr ""
+msgstr "Ottenuto messaggio #%u dal pad \"%s:%s\" (%s): "
 
 #, c-format
 msgid "Got message #%u from object \"%s\" (%s): "
-msgstr ""
+msgstr "Ottenuto messaggio #%u dall'oggetto \"%s\" (%s): "
 
-#, fuzzy, c-format
+#, c-format
 msgid "Got message #%u (%s): "
-msgstr "Ricevuto messaggio #%"
+msgstr "Ottenuto messaggio #%u (%s): "
 
 #, c-format
 msgid "Got EOS from element \"%s\".\n"
@@ -1031,18 +1031,18 @@ msgstr "Ottenuto EOS dall'elemento «%s».\n"
 
 #, c-format
 msgid "FOUND TAG      : found by element \"%s\".\n"
-msgstr "TAG TROVATO    : trovato dall'elemento «%s».\n"
+msgstr "TAG TROVATO    : trovato dall'elemento \"%s\".\n"
 
-#, fuzzy, c-format
+#, c-format
 msgid "FOUND TAG      : found by pad \"%s:%s\".\n"
-msgstr "TAG TROVATO    : trovato dall'elemento «%s».\n"
+msgstr "TAG TROVATO    : trovato dal pad \"%s:%s\".\n"
 
-#, fuzzy, c-format
+#, c-format
 msgid "FOUND TAG      : found by object \"%s\".\n"
-msgstr "TAG TROVATO    : trovato dall'elemento «%s».\n"
+msgstr "TAG TROVATO    : trovato dall'oggetto \"%s\".\n"
 
 msgid "FOUND TAG\n"
-msgstr ""
+msgstr "TAG TROVATO\n"
 
 #, c-format
 msgid ""
@@ -1074,7 +1074,7 @@ msgstr "Ridistribuzione latenza...\n"
 
 #, c-format
 msgid "Setting state to %s as requested by %s...\n"
-msgstr ""
+msgstr "Impostazione dello stato a %s come richiesto da %s...\n"
 
 msgid "Interrupt: Stopping pipeline ...\n"
 msgstr "Interrotto: arresto della pipeline ...\n"
@@ -1087,10 +1087,9 @@ msgstr "Stampa i tag (anche noti come metadati)"
 msgid "Output status information and property notifications"
 msgstr "Stampa informazioni di stato e notifiche delle proprietà"
 
-# -X, --exclude=TIPO1,TIPO2,...
-#, fuzzy
+# -q, --quiet 
 msgid "Do not print any progress information"
-msgstr "Non stampa le informazioni di stato per TIPO"
+msgstr "Non stampa alcuna informazione di avanzamento"
 
 # -m, --messages
 msgid "Output messages"
@@ -1118,8 +1117,9 @@ msgstr "Non installa un gestore di fault"
 msgid "Print alloc trace (if enabled at compile time)"
 msgstr "Stampa traccia di alloc (se abilitato in compilazione)"
 
+# -e, --eos-on-shutdown
 msgid "Force EOS on sources before shutting the pipeline down"
-msgstr ""
+msgstr "Forza EOS sulle sorgenti prima di arrestare la pipeline"
 
 #, c-format
 msgid "ERROR: pipeline could not be constructed: %s.\n"
@@ -1163,17 +1163,16 @@ msgid "ERROR: pipeline doesn't want to play.\n"
 msgstr "ERRORE: la pipeline non vuole riprodurre.\n"
 
 msgid "EOS on shutdown enabled -- Forcing EOS on the pipeline\n"
-msgstr ""
+msgstr "EOS all'arresto abilitato -- Forzato EOS sulla pipeline\n"
 
 msgid "Waiting for EOS...\n"
-msgstr ""
+msgstr "In attesa di EOS...\n"
 
-#, fuzzy
 msgid "EOS received - stopping pipeline...\n"
-msgstr "Interrotto: arresto della pipeline ...\n"
+msgstr "Ricevuto EOS - arresto della pipeline...\n"
 
 msgid "An error happened while waiting for EOS\n"
-msgstr ""
+msgstr "Si è verificato un errore durante l'attesa di EOS\n"
 
 # secondo me quel % è un errore... magari dovrebbe
 # essere %d o %s, a meno che non costruscano il messagio
@@ -1187,18 +1186,5 @@ msgstr "Impostazione della pipeline a READY ...\n"
 msgid "Setting pipeline to NULL ...\n"
 msgstr "Impostazione della pipeline a NULL ...\n"
 
-#, fuzzy
 msgid "Freeing pipeline ...\n"
-msgstr "Impostazione della pipeline a NULL ...\n"
-
-#~ msgid "Internal GStreamer error: state change failed."
-#~ msgstr "Errore interno di GStreamer: cambio di stato fallito."
-
-#~ msgid "Error while writing to file descriptor \"%d\"."
-#~ msgstr "Errore durante la scrittura sul descrittore di file «%d»."
-
-#~ msgid "File descriptor \"%d\" is not valid."
-#~ msgstr "Il descrittore di file «%d» non è valido."
-
-#~ msgid "FREEING pipeline ...\n"
-#~ msgstr "Esecuzione FREE su pipeline ...\n"
+msgstr "Esecuzione di free sulla pipeline...\n"
